qtvideonode-plugin (0.1.1) UNRELEASED; urgency=low

  * Minor shader polishing

 -- Guenter Schwann <guenter.schwann@canonical.com>  Fri, 26 Oct 2012 15:27:25 +0100

qtvideonode-plugin (0.1) UNRELEASED; urgency=low

  * Initial release.

 -- Guenter Schwann <guenter.schwann@canonical.com>  Wed, 24 Oct 2012 17:12:25 +0100
